Change slack channels links

--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -196,10 +196,10 @@
                         <p>Follow us <br> on Twitter</p>
                     </div>
                 </a>
-                <a href="https://spectrocloudcommunity.slack.com/join/shared_invite/zt-g8gfzrhf-cKavsGD_myOh30K24pImLA#/shared-invite/email" target="_blank">
+                <a href="https://slack.cncf.io/#kairos" target="_blank">
                     <i class="fa-brands fa-slack"></i>
                     <div>
-                        <p>Join our <br> Slack channel</p>
+                        <p>Join our <br> Slack channel in the CNCF workspace</p>
                     </div>
                 </a>
             </div>
