--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -381,6 +381,11 @@ footer {
     padding-right: 32px;
 }
 
+.sclogo{
+    max-width: 167px;
+    padding-left: 22px;
+}
+
 .footer-text {
     margin-top: 4px;
     padding-left: 32px;
@@ -1138,6 +1143,47 @@ footer {
 #basics-blade  {
     background: #FAFCFF;
     padding: 0 20px;
+}
+
+.cncf-blade  {
+    background: #03153A;
+    padding: 0 20px;
+}
+
+.cncf-blade a {
+    color: #EE5007;
+}
+
+.cncf-blade-wrap {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    padding: 64px 0px 84px 0px;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+}
+
+.cncf-blade-wrap > h2{
+    color: #FFF;
+    text-align: center;
+    font-family: Noto Sans;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 120%;
+}
+
+.cncf-blade-wrap > p{
+    max-width: 1055px;
+    color: #FDD3BF;
+    text-align: center;
+    font-family: Noto Sans;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%;
+    letter-spacing: 0.24px;
 }
 
 .basics {
