--- a/layouts/partials/hooks/head-end.html
+++ b/layouts/partials/hooks/head-end.html
@@ -1,1 +1,1 @@
-<script defer data-domain="kairos.io" src="https://plausible.io/js/script.js"></script>
+<script defer data-domain="kairos.io" src="https://plausible.io/js/script.outbound-links.file-downloads.js"></script>
