--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,4 +1,5 @@
 {{ define "main"}}
+    <script>document.addEventListener('DOMContentLoaded', function () { plausible('404', { props: { path: document.location.pathname } }); });</script>
     <main id="main">
       <div>
        <h1 id="title">Not found</h1>
