--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -1326,3 +1326,14 @@ footer {
 
 // load variables_project
 @import "variables_project";
+
+.distro-select-wrapper {
+    display: flex;
+    align-items: center;
+    height: 100%; /* Ensure the wrapper takes the full height of the parent */
+}
+
+#distro-select {
+    margin: 0; /* Remove default margin if any */
+    /* You can add any other styles needed for the select here */
+}
