Style the select
Signed-off-by: Mauro Morales <contact@mauromorales.com>

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -1327,6 +1327,7 @@ footer {
 // load variables_project
 @import "variables_project";
 
+// center the distro select vertically
 .distro-select-wrapper {
     display: flex;
     align-items: center;
