--- a/layouts/partials/navbar-lang-selector.html
+++ b/layouts/partials/navbar-lang-selector.html
@@ -1,5 +1,5 @@
 <div class="distro-select-wrapper">
-    <select id="distro-select">
+    <select id="distro-select" class="form-select">
         <option value="alpine;alpine;19">Alpine 19</option>
         <option value="debian;debian;bookworm">Debian Bookworm</option>
         <option value="debian;debian;testing">Debian Testing</option>
