--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,44 +12,8 @@
   </head>
   <body class="td-section astro-7XAARZHW">
     <header class="hero astro-7XAARZHW">
-      <nav class="td-navbar navbar-dark js-navbar-scroll">
-        <div class="nav-bar-wrapper">
-          <a class="navbar-brand" href="{{ .Site.Home.RelPermalink }}">
-            {{- /**/ -}}
-            <span class="navbar-brand__logo navbar-logo">
-              {{- if ne .Site.Params.ui.navbar_logo false -}}
-                {{ with resources.Get "icons/logo.svg" -}}
-                  {{ ( . | minify).Content | safeHTML -}}
-                {{ end -}}
-              {{ end -}}
-            </span>
-            {{- /**/ -}}
-            <span class="navbar-brand__name">
-              {{- .Site.Title -}}
-            </span>
-            {{- /**/ -}}
-          </a>
-          <div class="td-navbar-nav-scroll ms-md-auto" id="main_navbar">
-            <ul class="navbar-nav mt-2 mt-lg-0">
-              <li class="nav-item mr-4 mb-2 mb-lg-0">
-                <a class="nav-link" href="/docs/"><span>Documentation</span></a>
-              </li>
-              <li class="nav-item mr-4 mb-2 mb-lg-0">
-                <a class="nav-link" href="/community/"><span>Community</span></a>
-              </li>
-              <li class="nav-item mr-4 mb-2 mb-lg-0">
-                <a class="nav-link" href="/blog/"><span>Blog</span></a>
-              </li>
-              <li class="nav-item mr-4 mb-2 mb-lg-0 mt-lg-2">
-                <a class="github-button" href="https://github.com/kairos-io/kairos" data-size="large" data-show-count="true" aria-label="Star kairos-io/kairos on GitHub">Star</a>
-              </li>
-            </ul>
-          </div>
-          <div class="navbar-nav d-none d-lg-block">
-            {{ partial "search-input.html" . }}
-          </div>
-        </div>
-      </nav>
+      {{ partial "navbar.html" . }}
+
       <div class="overlay astro-7XAARZHW">
         <div class="constraint vertical astro-7XAARZHW">
           <div class="header astro-7XAARZHW">
