remove requirement for meta-distro class
Signed-off-by: Mauro Morales <contact@mauromorales.com>

--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -1,4 +1,4 @@
-kairos-$$flavor-$$flavorRelease-
+kairos-@flavor-@flavorRelease-
 {{- with .Get "variant" -}}{{- . -}}{{- end -}}
 -
 {{- if eq (.Get "arch") "" -}}
