--- a/layouts/shortcodes/oci.html
+++ b/layouts/shortcodes/oci.html
@@ -1,5 +1,5 @@
 {{- $.Page.Site.Params.softwareVersions.registryURL -}}
-/$$flavor:$$flavorRelease-
+/@flavor:@flavorRelease-
 {{- with .Get "variant" -}}
     {{- . -}}
 {{- end -}}
