--- a/layouts/shortcodes/ociCode.html
+++ b/layouts/shortcodes/ociCode.html
@@ -1,5 +1,5 @@
-<code class="meta-distro-inline">{{- $.Page.Site.Params.softwareVersions.registryURL -}}
-/$$flavor:$$flavorRelease-
+<code class="meta-distro">{{- $.Page.Site.Params.softwareVersions.registryURL -}}
+/@flavor:@flavorRelease-
 {{- with .Get "variant" -}}
     {{- . -}}
 {{- end -}}
