--- a/layouts/partials/navbar-lang-selector.html
+++ b/layouts/partials/navbar-lang-selector.html
@@ -1,14 +1,21 @@
-<div class="distro-select-wrapper">
-    <select id="distro-select" class="form-select">
-        <option value="alpine;alpine;3.19">Alpine 3.19</option>
-        <option value="debian;debian;bookworm">Debian Bookworm</option>
-        <option value="debian;debian;testing">Debian Testing</option>
-        <option value="rhel;fedora;40">Fedora 40</option>
-        <option value="opensuse;opensuse;leap-15.6">openSUSE Leap-15.6</option>
-        <option value="opensuse;opensuse;tumbleweed">openSUSE Tumbleweed</option>
-        <option value="rhel;rockylinux;9">Rockylinux 9</option>
-        <option value="ubuntu;ubuntu;24.04">Ubuntu 24.04</option>
-        <option value="ubuntu;ubuntu;22.04">Ubuntu 22.04</option>
-        <option value="ubuntu;ubuntu;20.04">Ubuntu 20.04</option>
-    </select>
-</div>
+<ul class="navbar-nav mt-2 mt-lg-0">
+    <li class="nav-item mr-4 mb-2 mb-lg-0">
+        <div class="distro-select-wrapper">
+            <select id="distro-select" class="form-select">
+                <option value="alpine;alpine;3.19">Alpine 3.19</option>
+                <option value="debian;debian;bookworm">Debian Bookworm</option>
+                <option value="debian;debian;testing">Debian Testing</option>
+                <option value="rhel;fedora;40">Fedora 40</option>
+                <option value="opensuse;opensuse;leap-15.6">openSUSE Leap-15.6</option>
+                <option value="opensuse;opensuse;tumbleweed">openSUSE Tumbleweed</option>
+                <option value="rhel;rockylinux;9">Rockylinux 9</option>
+                <option value="ubuntu;ubuntu;24.04">Ubuntu 24.04</option>
+                <option value="ubuntu;ubuntu;22.04">Ubuntu 22.04</option>
+                <option value="ubuntu;ubuntu;20.04">Ubuntu 20.04</option>
+            </select>
+        </div>
+    </li>
+    <li class="nav-item mr-4 mb-2 mb-lg-0 mt-lg-2">
+        <a class="github-button" href="https://github.com/kairos-io/kairos" data-size="large" data-show-count="true" aria-label="Star kairos-io/kairos on GitHub">Star</a>
+    </li>
+</ul>
