Update youtube channel on the footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,7 +14,7 @@
                     <a href="https://github.com/kairos-io/kairos" target="_blank">
                         <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="https://www.youtube.com/@kairos_oss" target="_blank">
+                    <a href="https://www.youtube.com/@Kairos-IO" target="_blank">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
                     <a rel="me" href="https://fosstodon.org/@kairos_OSS" target="_blank">
