Make "check out our latest release" a link
otherwise, where will people check it out?

Signed-off-by: Dimitris Karakasilis <dimitris@karakasilis.me>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -39,7 +39,7 @@
                 <p>our latest release</p>
                 <div class="hero-latest-release-version">
                   <div>Latest release</div>
-                  <div>{{$.Page.Site.Params.softwareVersions.kairos_version}}</div>
+                  <div><a href="https://github.com/kairos-io/kairos/releases/tag/{{$.Page.Site.Params.softwareVersions.kairos_version}}">{{$.Page.Site.Params.softwareVersions.kairos_version}}</a></div>
                 </div>
               </div>
             </div>
