--- a/layouts/partials/navbar-lang-selector.html
+++ b/layouts/partials/navbar-lang-selector.html
@@ -9,6 +9,7 @@
                 <option value="opensuse;opensuse;leap-15.6">openSUSE Leap-15.6</option>
                 <option value="opensuse;opensuse;tumbleweed">openSUSE Tumbleweed</option>
                 <option value="rhel;rockylinux;9">Rockylinux 9</option>
+                <option value="ubuntu;ubuntu;24.10">Ubuntu 24.10</option>
                 <option value="ubuntu;ubuntu;24.04">Ubuntu 24.04</option>
                 <option value="ubuntu;ubuntu;22.04">Ubuntu 22.04</option>
                 <option value="ubuntu;ubuntu;20.04">Ubuntu 20.04</option>
