--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -1066,7 +1066,11 @@ footer {
 .partners{
     max-width: 1200px;
     margin: 0 auto;
-    padding: 100px 0px;
+    padding: 64px 0px 84px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
 }
 
 .partners > h2 {
@@ -1078,6 +1082,18 @@ footer {
     font-style: normal;
     font-weight: 600;
     line-height: 120%;
+}
+
+.partners > p{
+    max-width: 1055px;
+    color: black;
+    text-align: center;
+    font-family: Noto Sans;
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%;
+    letter-spacing: 0.24px;
 }
 
 .partners > h2 > span:first-child{
