remove support page, and reword
Signed-off-by: Mauro Morales <mauro.morales@spectrocloud.com>

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -1096,6 +1096,10 @@ footer {
     letter-spacing: 0.24px;
 }
 
+.partners > p > span{
+    font-weight: 700;
+}
+
 .partners > h2 > span:first-child{
     color: #EE5007;
 }
