--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -207,8 +207,9 @@
     </div>
     <div id="partners-blade">
         <div class="partners">
-            <h2>Our Support Partners</h2>
-            <p>Our partners provide top-tier support for deploying and managing Kubernetes at the edge. They offer services such as Custom OS image creation and deployment, Edge security consulting, Troubleshooting, maintenance and more.</p>
+            <h2>Commercial Support</h2>
+            <p>Our partners offer top-tier <span>commercial support for Kairos</span>, ensuring smooth and secure Kubernetes edge deployments. Their services include custom OS image creation, advanced edge security, troubleshooting, and maintenance.</p>
+            <p>For Kairos commercial support, <span>get in touch</span> with our partners to ensure your project’s success.</p>
             <div class="partners-cards">
                 <div>
                     <div>
