--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -208,8 +208,7 @@
     <div id="partners-blade">
         <div class="partners">
             <h2>Commercial Support</h2>
-            <p>Our partners offer top-tier <span>commercial support for Kairos</span>, ensuring smooth and secure Kubernetes edge deployments. Their services include custom OS image creation, advanced edge security, troubleshooting, and maintenance.</p>
-            <p>For Kairos commercial support, <span>get in touch</span> with our partners to ensure your project’s success.</p>
+            <p>Need a hand? For enterprise support, <span>get in touch</span> with companies ready to help you tackle the toughest challenges.</p>
             <div class="partners-cards">
                 <div>
                     <div>
