fix twitter icon to x

--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -191,7 +191,7 @@
                     </div>
                 </a>
                 <a href="https://twitter.com/Kairos_OSS" target="_blank">
-                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-x-twitter"></i>
                     <div>
                         <p>Follow us <br> on Twitter</p>
                     </div>
