--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,7 +9,7 @@
             <div class="footer-follow-us">Follow us
                 <div>
                     <a href="https://twitter.com/Kairos_OSS" target="_blank">
-                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-x-twitter"></i>
                     </a>
                     <a href="https://github.com/kairos-io/kairos" target="_blank">
                         <i class="fa-brands fa-github"></i>
