Add partner event
Signed-off-by: Mauro Morales <mauro.morales@spectrocloud.com>

--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -216,7 +216,7 @@
                     </div>
                     <p><span>Spectro Cloud</span> is the main supporter behind Kairos and provides enterprise-grade Kubernetes management through its platform, Palette, which allows organizations to deploy, manage, and scale Kubernetes across various environments, including public clouds, data centers, bare metal, and edge computing.</p>
                     <div class="buttons astro-7XAARZHW">
-                        <a id="quickstart" href="mailto:kairos@spectrocloud.com" class="astro-7XAARZHW">
+                        <a id="quickstart" class="plausible-event-partner=Spectro+Cloud" href="mailto:kairos@spectrocloud.com" class="astro-7XAARZHW">
                             Contact
                         </a>
                     </div>
