change text twitter to X

--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -190,10 +190,10 @@
                         <p>Sign up to <br> our newsletter</p>
                     </div>
                 </a>
-                <a href="https://twitter.com/Kairos_OSS" target="_blank">
+                <a href="https://x.com/Kairos_OSS" target="_blank">
                     <i class="fa-brands fa-x-twitter"></i>
                     <div>
-                        <p>Follow us <br> on Twitter</p>
+                        <p>Follow us <br> on X</p>
                     </div>
                 </a>
                 <a href="https://slack.cncf.io/#kairos" target="_blank">
