--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,7 +8,7 @@
             </div>
             <div class="footer-follow-us">Follow us
                 <div>
-                    <a href="https://twitter.com/Kairos_OSS" target="_blank">
+                    <a href="https://x.com/Kairos_OSS" target="_blank">
                         <i class="fa-brands fa-x-twitter"></i>
                     </a>
                     <a href="https://github.com/kairos-io/kairos" target="_blank">
