--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -207,7 +207,7 @@
     </div>
     <div id="partners-blade">
         <div class="partners">
-            <h2>Commercial Support</h2>
+            <h2>Enterprise Support</h2>
             <p>Need a hand? For enterprise support, <span>get in touch</span> with companies ready to help you tackle the toughest challenges.</p>
             <div class="partners-cards">
                 <div>
