--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,5 @@
 <footer>
+    <img referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=051a8a26-af2c-4a22-a7d6-dba22bef829f" />
     <div id="footer-content">
         <div>
             <div class="footer-logo">
