--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
-    {{ if eq .Site.Environment "production" }}
+    {{ if hugo.IsProduction }}
     <img referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=051a8a26-af2c-4a22-a7d6-dba22bef829f" />
     {{ end }}
   </head>
