Add scarf pixel (#334)
* Add scarf pixel

Signed-off-by: Mauro Morales <contact@mauromorales.com>

* Only render on production

Signed-off-by: Mauro Morales <contact@mauromorales.com>

* check branch

Signed-off-by: Mauro Morales <contact@mauromorales.com>

* Use the new environment var

Signed-off-by: Mauro Morales <contact@mauromorales.com>

* rename hugo environment variable

Signed-off-by: Mauro Morales <contact@mauromorales.com>

* Use correct check

Signed-off-by: Mauro Morales <contact@mauromorales.com>

* Use netlify context variable

Signed-off-by: Mauro Morales <contact@mauromorales.com>

* oops

---------

Signed-off-by: Mauro Morales <contact@mauromorales.com>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,9 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+    {{ if hugo.IsProduction }}
+    <img referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=051a8a26-af2c-4a22-a7d6-dba22bef829f" />
+    {{ end }}
   </head>
   <body class="td-section astro-7XAARZHW">
     <header class="hero astro-7XAARZHW">
