--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -1165,6 +1165,7 @@ footer {
 .partners-cards > div img{
     width: 100%;
     height: 143px;
+    margin-bottom: 2rem;
 }
 
 .partners-cards > div h3 {
