--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
     <div id="footer-content">
         <div>
             <div class="footer-logo">
-                {{ $sclogo := resources.Get "/img/spectrocloud.svg" }}
+                {{ $sclogo := resources.Get "/img/spectrocloud-dark.svg" }}
                 <img src="/index/footer-logo.png" alt="Kairos Logo" loading="lazy">
                 <div class="footer-text">Project supported by <a href="https://spectrocloud.com" target="_blank"> <img src="{{ $sclogo.RelPermalink }}" class="sclogo" loading="lazy" width="192" height="51" alt="Spectro-Cloud-logo"> </a></div>
             </div>
