Fix homepage downloads text
Signed-off-by: Mauro Morales <contact@mauromorales.com>

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -700,6 +700,7 @@ footer {
     height: 100%;
     box-shadow: none;
     font-family: 'NOTO SANS';
+    color: black;
 }
 
 .download-cards > div > div:first-child {
