Add dark mode :sunglasses: (#357)
* Add dark mode :sunglasses:

Signed-off-by: Mauro Morales <contact@mauromorales.com>

* Fix homepage downloads text

Signed-off-by: Mauro Morales <contact@mauromorales.com>

---------

Signed-off-by: Mauro Morales <contact@mauromorales.com>

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -700,6 +700,7 @@ footer {
     height: 100%;
     box-shadow: none;
     font-family: 'NOTO SANS';
+    color: black;
 }
 
 .download-cards > div > div:first-child {
@@ -1480,22 +1481,9 @@ footer {
     }
 }
 
+@import 'td/code-dark';
 // load variables_project
 @import "variables_project";
-
-.alert-primary {
-    background-color: #edf1ff;
-    border-color: #4c7bd7;
-
-    .alert-heading {
-        color: #4c7bd7;
-    }
-}
-.alert-info {
-    .alert-heading {
-        color: #71b7b1;
-    }
-}
 
 // center the distro select vertically
 .distro-select-wrapper {
