--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -187,7 +187,7 @@
                 <a href="https://www.linkedin.com/company/kairos-oss/" target="_blank">
                     <i class="fa-brands fa-linkedin"></i>
                     <div>
-                        <p>Follow us LinkedIn</p>
+                        <p>Follow us on LinkedIn</p>
                     </div>
                 </a>
                 <a href="https://slack.cncf.io/#kairos" target="_blank">
