--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -1493,6 +1493,47 @@ footer {
 }
 
 #distro-select {
+    border: none;
     margin: 0; /* Remove default margin if any */
     /* You can add any other styles needed for the select here */
+}
+
+.telemetry-wrapper {
+    padding: 0.375rem 2.25rem 0.375rem 0.75rem
+}
+
+.telemetry-wrapper input {
+    margin-right: 0.3rem;
+}
+
+#telemetry-info {
+    color: $success; 
+    cursor: pointer;
+    position: relative;
+}
+
+#telemetry-modal {
+    display: none;
+    background: #212529;
+    position: absolute;
+    top: 5.5rem;
+    left: 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    width: 250px;
+    z-index: 10;
+    font-size: 14px;
+    word-wrap: break-word;
+    white-space: normal;
+}
+
+#telemetry-modal::before {
+    content: "";
+    position: absolute;
+    top: -10px;
+    left: 10px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent white transparent;
 }
