--- a/layouts/partials/navbar-lang-selector.html
+++ b/layouts/partials/navbar-lang-selector.html
@@ -1,20 +1,44 @@
 <ul class="navbar-nav mt-2 mt-lg-0">
-    <li class="nav-item mr-4 mb-2 mb-lg-0">
-        <div class="distro-select-wrapper">
-            <select id="distro-select" class="form-select">
-                <option value="alpine;alpine;3.19">Alpine 3.19</option>
-                <option value="debian;debian;bookworm">Debian Bookworm</option>
-                <option value="debian;debian;testing">Debian Testing</option>
-                <option value="rhel;fedora;40">Fedora 40</option>
-                <option value="opensuse;opensuse;leap-15.6">openSUSE Leap-15.6</option>
-                <option value="opensuse;opensuse;tumbleweed">openSUSE Tumbleweed</option>
-                <option value="rhel;rockylinux;9">Rockylinux 9</option>
-                <option value="ubuntu;ubuntu;24.10">Ubuntu 24.10</option>
-                <option value="ubuntu;ubuntu;24.04">Ubuntu 24.04</option>
-                <option value="ubuntu;ubuntu;22.04">Ubuntu 22.04</option>
-                <option value="ubuntu;ubuntu;20.04">Ubuntu 20.04</option>
-            </select>
-        </div>
+    <li class="td-light-dark-menu nav-item dropdown">
+        <button class="btn btn-link nav-link dropdown-toggle d-flex align-items-center" id="bd-theme" type="button" aria-expanded="false" data-bs-toggle="dropdown" data-bs-display="static" aria-label="Toggle Settings">
+            <div id="current-base-distro">
+            Rockylinux 9
+            </div> &nbsp;
+            <i class="fa-solid fa-gear"></i>
+        </button>
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-theme-text">
+            <li>
+                <div class="distro-select-wrapper">
+                    <select id="distro-select" class="form-select">
+                        <option value="alpine;alpine;3.19">Alpine 3.19</option>
+                        <option value="debian;debian;bookworm">Debian Bookworm</option>
+                        <option value="debian;debian;testing">Debian Testing</option>
+                        <option value="rhel;fedora;40">Fedora 40</option>
+                        <option value="opensuse;opensuse;leap-15.6">openSUSE Leap-15.6</option>
+                        <option value="opensuse;opensuse;tumbleweed">openSUSE Tumbleweed</option>
+                        <option value="rhel;rockylinux;9">Rockylinux 9</option>
+                        <option value="ubuntu;ubuntu;24.10">Ubuntu 24.10</option>
+                        <option value="ubuntu;ubuntu;24.04">Ubuntu 24.04</option>
+                        <option value="ubuntu;ubuntu;22.04">Ubuntu 22.04</option>
+                        <option value="ubuntu;ubuntu;20.04">Ubuntu 20.04</option>
+                    </select>
+                </div>
+            </li>
+            <li>
+                <div class="telemetry-wrapper">
+                    <input type="checkbox" id="telemetry-checkbox" class="form-checkbox" checked>
+                    <label for="telemetry-checkbox" class="form-checkbox-label">Telemetry <i id="telemetry-info" class="fa-solid fa-circle-info"></i></label>
+                    <div id="telemetry-modal">
+                        <p>
+                        Telemetry collects anonymous usage data to improve user experience. You can disable it anytime by unchecking the box.
+                        </p>
+                        <p>
+                        Scarf purges personally identifiable information immediately after metadata lookup, ensuring that no sensitive data is stored. Scarf is a GDPR-compliant data processor, and is currently undergoing SOC2 certification. You can learn more about it on <a href="https://scarf.sh/" target="_blank">scarf.sh</a>.
+                        </p>
+                    </div>
+                </div>
+            </li>
+        </ul>
     </li>
     <li class="nav-item mr-4 mb-2 mb-lg-0 mt-lg-2">
         <a class="github-button" href="https://github.com/kairos-io/kairos" data-size="large" data-show-count="true" aria-label="Star kairos-io/kairos on GitHub">Star</a>
